[package]
name = "xxhash-c"
version = "0.8.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Safe wrapper to xxhash"
readme = "README.md"
repository = "https://github.com/DoumanAsh/xxhash-c"
license = "BSL-1.0"
keywords = ["hash", "xxhash", "bindings"]
categories = ["algorithms"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
xxhash-c-sys = "0.8.1"

[dev-dependencies]
get-random-const = "2"
